# markdown

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
misc/: test_file.md  test_template.html
src/: lib.rs  main.rs  markdown.rs  tests.rs
tests/: raw_paragraph.rs
