[package]
name = "markdown"
version = "0.1.0"
edition = "2021"
description = "A basic CLI application to convert Markdown files to HTML files"
license = "GPL v3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
markdown = "1.0.0-alpha.4"
bpaf = "0.7.7"
